// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelectField > matches snapshots > when closed 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-hUAZgl itcLkM aje-multiselect"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-eiwqOE kgIjdl aje-btn sc-gpHbIA hQGFNP aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      tabindex="0"
      type="button"
    >
      Open up
      <i
        aria-hidden="true"
        class="sc-jBIHhB dShSRo aje-icon material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultiSelectField > matches snapshots > when open 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-hUAZgl itcLkM aje-multiselect"
  >
    <button
      aria-controls="react-aria-:r9:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:rf: react-aria-:rb:"
      class="sc-eiwqOE kgIjdl aje-btn sc-gpHbIA hQGFNP aje-btn--dropdown is-medium"
      data-pressed="true"
      id="react-aria-:ra:"
      tabindex="0"
      type="button"
    >
      Open up
      <i
        aria-hidden="true"
        class="sc-jBIHhB dShSRo aje-icon material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;
